Fix java 17 issue