@@ -34,6 +34,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import java.util.Date;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import org.hisp.dhis.common.IdentifiableObjectManager;
 import org.hisp.dhis.dxf2.events.TrackedEntityInstanceEnrollmentParams;
@@ -142,7 +143,7 @@ class TrackerSynchronizationTest extends SingleSetupIntegrationTestBase
             .getTrackedEntityInstances( queryParams, params, true, true );
 
         assertContainsOnly( List.of( TEI_NOT_IN_SYNC_UID, SYNCHRONIZED_TEI_UID ),
-            fetchedTeis.stream().map( t -> t.getTrackedEntityInstance() ).toList() );
+            fetchedTeis.stream().map( t -> t.getTrackedEntityInstance() ).collect( Collectors.toList() ) );
         assertEquals( 1, getTeiByUid( fetchedTeis, TEI_NOT_IN_SYNC_UID ).getAttributes().size() );
     }
 
@@ -156,7 +157,7 @@ class TrackerSynchronizationTest extends SingleSetupIntegrationTestBase
             .getTrackedEntityInstances( queryParams, params, true, true );
 
         assertContainsOnly( List.of( TEI_NOT_IN_SYNC_UID ),
-            fetchedTeis.stream().map( t -> t.getTrackedEntityInstance() ).toList() );
+            fetchedTeis.stream().map( t -> t.getTrackedEntityInstance() ).collect( Collectors.toList() ) );
         assertEquals( 1, getTeiByUid( fetchedTeis, TEI_NOT_IN_SYNC_UID ).getAttributes().size() );
     }
 
